src/objects/App_Exc_RTP_Convertor__c.object
<CustomObject>
    <description>This Object helps to create records that take Rich Text format as Input for RTF and render Plain Text output in the PTF with zero change to format.</description>
    <fields>
        <fullName>RTP_CaseLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>RTP Convertors</relationshipLabel>
        <relationshipName>RTP_Convertors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RTP_Comment__c</fullName>
        <label>Plain Comment</label>
        <length>92768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RTP_Notetype__c</fullName>
        <label>Notetype</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RTP_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make Visible to External Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RTP_Rich_Comment__c</fullName>
        <label>Rich Comment</label>
        <length>92768</length>
        <type>Html</type>
    </fields>
    <label>RTP Convertor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RTP-{0000000000}</displayFormat>
        <label>RTP Record Nunmber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTP Convertors</pluralLabel>
    <recordTypes>
        <fullName>Case_comment</fullName>
        <active>true</active>
        <label>Case comment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>